- Validation and DB connection working.

--- a/BeerFermControlWEB/src/main/webapp/WEB-INF/static/css/signin.css
+++ b/BeerFermControlWEB/src/main/webapp/WEB-INF/static/css/signin.css
@@ -24,9 +24,12 @@ body {
   padding: 15px;
   margin: 0 auto;
 }
-.form-signin .checkbox {
-  font-weight: 400;
+
+.form-signin .error {
+    color: red;
+    font-size: larger;
 }
+
 .form-signin .form-control {
   position: relative;
   box-sizing: border-box;
